converted final div tags to semantics, began restructuring CSS

--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
     <!--Replaced div class = "header" with header tag.-->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <!-- div tag changed to nav -->
+        <nav>
             <ul>
                 <!--Organized list elements to remain in one line in order to appear more organized.-->
                 <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
                 <li><a href="#online-reputation-management">Online Reputation Management</a></li>
                 <li><a href="#social-media-marketing">Social Media Marketing</a></li>
             </ul>
-        </div>
+        </nav>
     </header>
+    <!-- The div below will remain the same since image sizing attributes may cause issues with image distortion. -->
     <div class="hero"></div>
     <section class="content">
         <!-- added id so the link works -->
