--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div class="hero"></div>
     <section class="content">
         <!-- added id so the link works -->
+        <!--removed redundant classes-->
         <article id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -46,6 +47,7 @@
     <!-- renamed from div to section -->
     <section class="benefits">
         <!-- renamed div to article -->
+        <!-- removed redundant classes -->
         <article>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
